[tool.poetry]
name = "ext-md-to-html"
version = "0.1.0"
description = ""
authors = ["Torben Carstens <git@carstens.tech>"]
readme = "README.md"
packages = [{ include = "extmdtohtml", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
flask = "^3.0.1"
mistune = "^3.0.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
black = "^24.0.0"
ruff = "^0.4.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
